# whitespace-asm

./: .gitattributes  LICENSE  Makefile  README.md  format.sh  pyproject.toml  test.sh
.github/workflows/: makefile.yml
examples/: baklava.wsasm  hello-world.ws  hello-world.wsasm
examples/bad/: bad.wsasm
examples/baklava/: baklava.ws.raw
examples/fizz-buzz/: fizz-buzz.ws.raw  fizz-buzz.wsasm
examples/hello-world/: hello-world.ws.raw  hello-world.wsasm
test/: conftest.py  pyproject.toml  test_asm.py
whitespace_asm/: asm.py
