[tool.poetry]
name = "whitespace-asm"
version = "1.0.0"
description = "Assembler for the Whitespace Programming Language"
authors = ["rzuckerm"]
readme = "README.md"
homepage = "https://github.com/rzuckerm/whitespace-asm"
license = "LICENSE"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/rzuckerm/whitespace-asm/issues"

[tool.poetry.scripts]
whitespace-asm = "whitespace_asm.asm:main"

[tool.poetry.dependencies]
python = "^3.10"
whitespace = "1.0.0b8"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
coverage = "^7.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
